Fix part of collapsed panes is hidden

--- a/src/styles/notes-explorer.scss
+++ b/src/styles/notes-explorer.scss
@@ -89,10 +89,11 @@
     overflow: hidden;
 
     &.collapsed {
-        flex-grow: 0.00001;
+        flex: 0 0 auto;
     }
     &.expanded {
         flex-grow: 1;
+        flex-basis: 0;
     }
 }
 
